--- a/app/src/main/res/layout/fragment_earthquake_info.xml
+++ b/app/src/main/res/layout/fragment_earthquake_info.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:layoutDirection="ltr"
+    android:orientation="vertical"
     tools:context=".EarthquakeInfo">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/earthquakeRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
     </androidx.recyclerview.widget.RecyclerView>
 
-</FrameLayout>
+    <ProgressBar
+        android:id="@+id/progressbar"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|center_vertical"
+
+        ></ProgressBar>
+
+</LinearLayout>
